--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
           <h4>Quiz App</h4>
         </div>
         <div class="row-icon">
-          <a href="https://github.com/jdumez10/Covid19-Colombia-General-Analysis/"><i class="ri-github-fill"></i></a>
+          <a href="https://github.com/jdumez10/Quiz-App"><i class="ri-github-fill"></i></a>
         </div>
       </div>
       <h5>Full stack website for quiz group sharing and knowledge improvement</h5>
@@ -321,7 +321,7 @@
           <h4>Photo Album</h4>
         </div>
         <div class="row-icon">
-          <a href="https://github.com/jdumez10/Covid19-Colombia-General-Analysis/"><i class="ri-github-fill"></i></a>
+          <a href=""><i class="ri-github-fill"></i></a>
         </div>
       </div>
       <h5>Dynamic photo album created by using dessing patterns and the MVC Methodology</h5>
@@ -334,7 +334,7 @@
           <h4>Well Logs Prediction</h4>
         </div>
         <div class="row-icon">
-          <a href="https://github.com/jdumez10/Covid19-Colombia-General-Analysis/"><i class="ri-github-fill"></i></a>
+          <a href="https://github.com/jdumez10/Sonic-Well-Logs-Prediction-ML-ApacheSpark"><i class="ri-github-fill"></i></a>
         </div>
       </div>
       <h5>Sonic well logs (P and S waves) prediction using supervised ML models</h5>
@@ -347,10 +347,10 @@
           <h4>R-Type Classification</h4>
         </div>
         <div class="row-icon">
-          <a href="https://github.com/jdumez10/Covid19-Colombia-General-Analysis/"><i class="ri-github-fill"></i></a>
+          <a href="https://github.com/jdumez10/Petrophysical-Rock-Properties-Prediction-ML"><i class="ri-github-fill"></i></a>
         </div>
       </div>
-      <h5>Website Developement For X</h5>
+      <h5>Rock Typing and Mechanical Facies Classification using unsupervised ML models</h5>
     </div>
 
     <div class="row">
@@ -360,10 +360,10 @@
           <h4>R-Properties Prediction</h4>
         </div>
         <div class="row-icon">
-          <a href="https://github.com/jdumez10/Covid19-Colombia-General-Analysis/"><i class="ri-github-fill"></i></a>
+          <a href="https://github.com/jdumez10/Petrophysical-Rock-Properties-Prediction-ML"><i class="ri-github-fill"></i></a>
         </div>
       </div>
-      <h5>Website Developement For X</h5>
+      <h5>Rock Properties prediction using different supervised ML models</h5>
     </div>
 
   </div>
