--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </ul>
 
 <div class="top-btnn">
-  <a href="contact" class="h-btn">Contact me</a>
+  <a href="#contact" class="h-btn">Contact me</a>
 </div>
 
 
@@ -47,15 +47,17 @@
     <p></p>
 
     <div class="social">
-      <a href="https://github.com/jdumez10"><i class="ri-github-fill"></i> </a>
-      <a href="https://www.linkedin.com/in/jdumezg/"><i class="ri-linkedin-fill"></i> </a>
+      <a href="https://github.com/jdumez10"><i class="ri-github-fill"></i></a>
+      <a href="https://www.linkedin.com/in/jdumezg/"><i class="ri-linkedin-fill"></i></a>
     </div>
     <div class="main-btn">
       <a href="#contact" class="btn">Contact me</a>
-      <a href="#" class="btn btn2">Download Resume</a>
+      <button id="open-resume" class="resume-btn">Resume</button>
     </div>
   </div>
 </section>
+
+
 
 <!---------------------------------------------------------------------->
 <!---------------------------- About Section --------------------------->
@@ -161,44 +163,6 @@
 
 </section>
 
-<!-- 
-<section class="experience" id="experience">
-  <div class="center-text" data-aos="fade-down">
-    <h2>My <span>Experience</span> </h2>
-  </div>
-  <div class="experience-content" data-aos="zoom-in-up">
-    <div class="experience_time">
-      <span class="experience_rounder"></span>
-      <span class="experience_line"></span>
-    </div>
-    
-    <div class="experience_data bd-grid">
-      <h3 class="experience_title">Khoury Research Apprentice</h3>
-      <span class="experience_company">Sep 2023 to 2023 | Northeastern University</span>
-      <p class="experience_description" style="margin-top: 10px;">
-        • Scheduled to help enhancing the NeRF pipeline scalability using commercial clouds, optimizing real-time geospatial
-        data access and alignment algorithms for improved interactive petabyte-scale applications
-      </p>
-    </div>
-
-    <div class="experience_data bd-grid">
-      <h3 class="experience_title">Graduate Teaching Assistant - TA Head - Discrte Structures</h3>
-      <span class="experience_company">Sep 2023 to 2023 | Northeastern University</span>
-      <p class="experience_description" style="margin-top: 10px;">
-      • Holding office hours in a one-on-one and group settings for reviewing course content and answering students’ questions<br>
-      • Assisted professor and student teaching assistants to manage logistics for the course, grading exams and students’ homework for 100+ students<br>
-      • Appointed as the head teaching assistant, responsible for overseeing the team of 9 TAs and coordinating their tasks<br>
-      </p>
-    </div>
-
-  </div>
-
-  </div>
-
-</section>
--->
-
-<!---------------------------------------------------------------------->
 <!------------------------- Experience Section ------------------------->
 <!---------------------------------------------------------------------->
 
