Experience Section updated

--- a/index.html
+++ b/index.html
@@ -178,11 +178,28 @@
       </div>
       
       <div class="experience_data bd-grid">
-        <h3 class="experience_title">Khoury Research Apprentice</h3>
-        <span class="experience_company">Sep 2023 to Dec 2023 | Northeastern University</span>
+        <h3 class="experience_title">Software Engineer - Color Image Scientist Co-Op</h3>
+        <span class="experience_company">Jan 2023 to Present | E Ink Corporation</span>
         <p class="experience_description" style="margin-top: 10px;">
-          • Scheduled to help enhance the NeRF pipeline scalability using commercial clouds, optimizing real-time geospatial
-          data access and alignment algorithms for improved interactive petabyte-scale applications
+          • Developed and maintained an internal web application using Flask, Django, and Dash to optimize ePaper panel development, reducing development time by 30%<br>
+          • Debugged and configured ePaper demo units software driver using Python and MVC methodology, improving performance by 25%<br>
+          • Enhanced reliability of ePaper demo units by implementing robust testing procedures, resulting in a 30% reduction in downtime and troubleshooting<br>
+          • Developed a standalone software application with a custom GUI for efficient ePaper demo unit control, reducing setup time by 40%
+        </p>
+      </div>
+    </div>
+
+    <div class="experience_content">
+      <div class="experience_time">
+        <span class="experience_rounder"></span>
+        <span class="experience_line"></span>
+      </div>
+      
+      <div class="experience_data bd-grid">
+        <h3 class="experience_title">Khoury Research Apprentice</h3>
+        <span class="experience_company">Sep 2023 to Present | Northeastern University</span>
+        <p class="experience_description" style="margin-top: 10px;">
+          • Developed and maintained the 3DSceneGraph-API using Neo4j, GraphQL, and Apollo Server, enabling advanced 3D scene analysis and data manipulation for urban development and virtual navigation applications
         </p>
       </div>
     </div>
@@ -212,33 +229,13 @@
         <h3 class="experience_title">Petrophysicist - Scrum Master</h3>
         <span class="experience_company">Mar 2020 to Jul 2022 | Drummond Energy</span>
         <p class="experience_description" style="margin-top: 10px;">
-          • Reduced costs and time by developing ML models for predicting sonic well logs and rock classification, eliminating
-          the need for expensive tools and decreasing rock classification time by 50%<br>
-          • Improved collaboration by implementing a SharePoint website for sharing department’s products and serving as a
-          repository for key deliverables<br>
-          • Enhanced subsurface data management by creating and updating databases for Cesar-Rancheria Basin wells,
-          enabling informed decisions for future well data acquisition<br>
-          • Provided Agile project management support as a Scrum Master for a team of 11 contributors, implementing Agile
-          Methodologies<br>
+          • Reduced costs and time by developing ML models for predicting sonic well logs and rock classification, eliminating the need for expensive tools and decreasing rock classification time by 50%<br>
+          • Improved collaboration by implementing a SharePoint website for sharing department’s products and serving as a repository for key deliverables<br>
+          • Enhanced subsurface data management by creating and updating databases for Cesar-Rancheria Basin wells, enabling informed decisions for future well data acquisition<br>
+          • Provided Agile project management support as a Scrum Master for a team of 11 contributors, implementing Agile Methodologies<br>
         </p>
       </div>
     </div>
-
-    <div class="experience_content">
-      <div class="experience_time">
-        <span class="experience_rounder"></span>
-        <span class="experience_line"></span>
-      </div>
-      <div class="experience_data bd-grid">
-        <h3 class="experience_title">Student Intern</h3>
-        <span class="experience_company">Jan 2019 to Jul 2019 | Schlumberger - Technology Lifecycle Management - Wireline</span>
-        <p class="experience_description" style="margin-top: 10px;">
-          • Executed the implementation of RFID tags on Testing equipment, resulting in a 10% reduction in asset scanning time and an enhanced ability to trace assets. This strategic initiative aimed to replace conventional QR Code Labels with RFID tags, effectively contributing to improved overall time efficiency<br>
-          • Collaboratively contributed to the maintenance, calibration, and verification of open hole and cased hole wireline tools, collectively ensuring the accuracy of downhole data collection processes<br>
-        </p>
-      </div>
-    </div>
-
   </div>
 </section>
 
