Minor Resume adjustments index.html

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
       
       <div class="experience_data bd-grid">
         <h3 class="experience_title">Software Engineer - Color Image Scientist Co-Op</h3>
-        <span class="experience_company">Jan 2023 to Present | E Ink Corporation</span>
+        <span class="experience_company">Jan 2024 to August 2024 | E Ink Corporation</span>
         <p class="experience_description" style="margin-top: 10px;">
           • Developed and maintained an internal web application using Flask, Django, and Dash to optimize ePaper panel development, reducing development time by 30%<br>
           • Debugged and configured ePaper demo units software driver using Python and MVC methodology, improving performance by 25%<br>
@@ -196,7 +196,7 @@
       
       <div class="experience_data bd-grid">
         <h3 class="experience_title">Khoury Research Apprentice</h3>
-        <span class="experience_company">Sep 2023 to Present | Northeastern University</span>
+        <span class="experience_company">Sep 2023 to Dec 2023 | Northeastern University</span>
         <p class="experience_description" style="margin-top: 10px;">
           • Developed and maintained the 3DSceneGraph-API using Neo4j, GraphQL, and Apollo Server, enabling advanced 3D scene analysis and data manipulation for urban development and virtual navigation applications
         </p>
@@ -228,10 +228,10 @@
         <h3 class="experience_title">Petrophysicist - Scrum Master</h3>
         <span class="experience_company">Mar 2020 to Jul 2022 | Drummond Energy</span>
         <p class="experience_description" style="margin-top: 10px;">
-          • Reduced costs and time by developing ML models for predicting sonic well logs and rock classification, eliminating the need for expensive tools and decreasing rock classification time by 50%<br>
-          • Improved collaboration by implementing a SharePoint website for sharing department’s products and serving as a repository for key deliverables<br>
-          • Enhanced subsurface data management by creating and updating databases for Cesar-Rancheria Basin wells, enabling informed decisions for future well data acquisition<br>
-          • Provided Agile project management support as a Scrum Master for a team of 11 contributors, implementing Agile Methodologies<br>
+          • Reduced costs by 30\% and decreased rock classification time by 50% by developing ML models for predicting sonic well logs and rock classification<br>
+          • Improved collaboration by implementing a SharePoint website, increasing accessibility to key deliverables by 40%<br>
+          • Enhanced subsurface data management by creating and updating databases using SQL and NoSQL databases, and analyzing data using PowerBI, improving data accessibility by 35%<br>
+          • Provided Agile project management support as a Scrum Master for a team of 11 contributors<br>
         </p>
       </div>
     </div>
