--- a/index.html
+++ b/index.html
@@ -262,29 +262,16 @@
     </div>
 
     <div class="row">
-      <img src="./img/port-2.jpg" alt="">
+      <img src="./img/port-7.jpg" alt="">
       <div class="main-row">
         <div class="row-text">
-          <h4>COVID-19 analysis</h4>
+          <h4>LOTR Analysis</h4>
         </div>
         <div class="row-icon">
-          <a href="https://github.com/jdumez10/Covid19-Colombia-General-Analysis/"><i class="ri-github-fill"></i></a>
+          <a href="https://github.com/jdumez10/NLP-Analysis-of-The-Lord-of-the-Rings-Dialogues"><i class="ri-github-fill"></i></a>
         </div>
       </div>
-      <h5>Analysis of the correlation between COVID-19 cases in Colombia and social factors</h5>
-    </div>
-
-    <div class="row">
-      <img src="./img/port-3.jpg" alt="">
-      <div class="main-row">
-        <div class="row-text">
-          <h4>Photo Album</h4>
-        </div>
-        <div class="row-icon">
-          <a href=""><i class="ri-github-fill"></i></a>
-        </div>
-      </div>
-      <h5>Dynamic photo album created by using dessing patterns and the MVC Methodology</h5>
+      <h5>NLP applied to analyze and predict characters from The Lord of the Rings dialogues</h5>
     </div>
 
     <div class="row">
@@ -298,6 +285,19 @@
         </div>
       </div>
       <h5>Sonic well logs (P and S waves) prediction using supervised ML models</h5>
+    </div>
+
+    <div class="row">
+      <img src="./img/port-8.jpg" alt="">
+      <div class="main-row">
+        <div class="row-text">
+          <h4>Kanbas App</h4>
+        </div>
+        <div class="row-icon">
+          <a href="https://github.com/jdumez10/Kanbas-App"><i class="ri-github-fill"></i></a>
+        </div>
+      </div>
+      <h5>Course management web app with authentication & grade tracking</h5>
     </div>
 
     <div class="row">
@@ -325,6 +325,33 @@
       </div>
       <h5>Rock Properties prediction using different supervised ML models</h5>
     </div>
+
+    <div class="row">
+      <img src="./img/port-2.jpg" alt="">
+      <div class="main-row">
+        <div class="row-text">
+          <h4>COVID-19 analysis</h4>
+        </div>
+        <div class="row-icon">
+          <a href="https://github.com/jdumez10/Covid19-Colombia-General-Analysis/"><i class="ri-github-fill"></i></a>
+        </div>
+      </div>
+      <h5>Analysis of the correlation between COVID-19 cases in Colombia and social factors</h5>
+    </div>
+
+    <div class="row">
+      <img src="./img/port-3.jpg" alt="">
+      <div class="main-row">
+        <div class="row-text">
+          <h4>Photo Album</h4>
+        </div>
+
+      </div>
+      <h5>Dynamic photo album using design patterns and MVC methodology</h5>
+    </div>
+
+
+
 
   </div>
 </section>
