--- a/index.html
+++ b/index.html
@@ -258,7 +258,33 @@
           <a href="https://github.com/jdumez10/Quiz-App"><i class="ri-github-fill"></i></a>
         </div>
       </div>
-      <h5>Full stack website for quiz group sharing and knowledge improvement</h5>
+      <h5>Full stack website for quiz group sharing and knowledge improvement using MERN methodology</h5>
+    </div>
+
+    <div class="row">
+      <img src="./img/port-9.jpg" alt="">
+      <div class="main-row">
+        <div class="row-text">
+          <h4>Geological Facies Modeling</h4>
+        </div>
+        <div class="row-icon">
+          <a href="https://github.com/jdumez10/GAN-Generator-for-Geological-Facies-Modeling"><i class="ri-github-fill"></i></a>
+        </div>
+      </div>
+      <h5>Progressive GAN to generate geological facies models with realistic spatial continuity</h5>
+    </div>
+    
+    <div class="row">
+      <img src="./img/port-10.jpg" alt="">
+      <div class="main-row">
+        <div class="row-text">
+          <h4>Pokémon Battle AI</h4>
+        </div>
+        <div class="row-icon">
+          <a href="https://github.com/jdumez10/pokemon_battle_showdown"><i class="ri-github-fill"></i></a>
+        </div>
+      </div>
+      <h5>Deep Q-Learning agent optimizing strategies in a Pokémon Showdown environment</h5>
     </div>
 
     <div class="row">
