--- a/index.html
+++ b/index.html
@@ -67,17 +67,17 @@
     <img src="./img/about.jpg">
   </div>
   <div class="about-text" data-aos="zoom-in-up">
-    <h2>I am a<span> Computer Science</span><br>
-      Graduate Student</h2>
+    <h2>                                                                   
+      I am coming from the <span> tech industry and energy industry </span><br>
+      </h2>
     <div class="exp-area">
+
       <p class="exp">
-        I'm currently pursuing my Master's in Computer Science at Northeastern University. 
+        My diverse background includes experience as a Software Engineer in the tech industry and as Data Scientist in the energy industry.
       </p>
       <p class="exp">
-        Coming from the energy industry, my experience as a Petrophysicist introduced me to the world of data science, machine learning, and web development, showcasing how these tools can optimize various industries. 
-      </p>
-      <p class="exp">
-        I also have had the privilege of serving as a Scrum Master for a dedicated team of 11 contributors, immersing ourselves in Agile methodologies.
+
+        Nowadays I have a deep passion towards technology and AI and how it can be applied to optimize various sectors!
       </p>
     </div>      
 
