Portfolio updated May 2025

--- a/index.html
+++ b/index.html
@@ -249,16 +249,16 @@
 
   <div class="Portfolio-content" data-aos="zoom-in-up">
     <div class="row">
-      <img src="./img/port-1.jpg" alt="">
+      <img src="./img/port-8.jpg" alt="">
       <div class="main-row">
         <div class="row-text">
-          <h4>Quiz App</h4>
+          <h4>Kanbas App</h4>
         </div>
         <div class="row-icon">
-          <a href="https://github.com/jdumez10/Quiz-App"><i class="ri-github-fill"></i></a>
+          <a href="https://github.com/jdumez10/Kanbas-App"><i class="ri-github-fill"></i></a>
         </div>
       </div>
-      <h5>Full stack website for quiz group sharing and knowledge improvement using MERN methodology</h5>
+      <h5>Course management web app with authentication & grade tracking using the MERN methodology</h5>
     </div>
 
     <div class="row">
@@ -273,19 +273,6 @@
       </div>
       <h5>Progressive GAN to generate geological facies models with realistic spatial continuity</h5>
     </div>
-    
-    <div class="row">
-      <img src="./img/port-10.jpg" alt="">
-      <div class="main-row">
-        <div class="row-text">
-          <h4>Pokémon Battle AI</h4>
-        </div>
-        <div class="row-icon">
-          <a href="https://github.com/jdumez10/pokemon_battle_showdown"><i class="ri-github-fill"></i></a>
-        </div>
-      </div>
-      <h5>Deep Q-Learning agent optimizing strategies in a Pokémon Showdown environment</h5>
-    </div>
 
     <div class="row">
       <img src="./img/port-7.jpg" alt="">
@@ -297,7 +284,7 @@
           <a href="https://github.com/jdumez10/NLP-Analysis-of-The-Lord-of-the-Rings-Dialogues"><i class="ri-github-fill"></i></a>
         </div>
       </div>
-      <h5>NLP applied to analyze and predict characters from The Lord of the Rings dialogues</h5>
+      <h5>NLP applied to compare, analyze and predict characters from The Lord of the Rings dialogues</h5>
     </div>
 
     <div class="row">
@@ -313,18 +300,6 @@
       <h5>Sonic well logs (P and S waves) prediction using supervised ML models</h5>
     </div>
 
-    <div class="row">
-      <img src="./img/port-8.jpg" alt="">
-      <div class="main-row">
-        <div class="row-text">
-          <h4>Kanbas App</h4>
-        </div>
-        <div class="row-icon">
-          <a href="https://github.com/jdumez10/Kanbas-App"><i class="ri-github-fill"></i></a>
-        </div>
-      </div>
-      <h5>Course management web app with authentication & grade tracking</h5>
-    </div>
 
     <div class="row">
       <img src="./img/port-5.jpg" alt="">
